EXTRA SLIDING WORK EXPERIENCE ANIMATION PROBLEM SOLVED

--- a/index.html
+++ b/index.html
@@ -57,17 +57,27 @@
 										<b>HTML5, CSS3, Javascript</b>
 									</p>
 								</div>
+								<!-- <div id="hoverContactInfo">
+									 <span><i class="fas fa-spin  fa-phone"></i></span>
+									 <span><i class="far fa-spin  fa-envelope"></i></span>
+									 <span><i class="fas fa-spin  fa-home"></i></span>
+								</div> -->
 							</div>
 						</div>
 						</div>
 
 						<div id="contactInfo">
+							<!-- <div></div> -->
 							<div id="content">
-								<p> <span><i class="fas fa-spin fa-phone"></i></span> 9110298342</p>
+								<p> <span><i class="fas fa-spin fa-phone"></i></span> +919110298342</p>
 								<p> <span><i class="far fa-spin fa-envelope"></i></span> arysharma1209@gmail.com</p>
-								<p> <span><i class="fas fa-spin fa-home"></i></span> JP Nagar 7th Phase, Bengaluru</p>
+								<p> <span><i class="fas fa-spin fa-home"></i></span> #143, JP Nagar 7th Phase, Bengaluru</p>
 
-					 		</div>
+							 </div>
+							 
+							 <!-- <div id="hoverToProfile">
+								 <span><i class="fas fa-2x fa-backward"></i></span>
+							 </div> -->
 
 						</div>
 					</div>
