ADDED BACKGROUND IMAGE INSTEAD OF NORMAL IMAGE FOR THE PROFILE PIC TO MAKE IT COMPATIBLE WITH FIREFOX

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 						<h1>Profile</h1>
 						<div class="profile">
 							<div id="basicInfo">
-								<div class="image"><img alt="Profile Pic"/></div>
+								
+								<div class="image"></div>
 								<div class="text">
 									<h2>Aryan Sharma</h2>
 									<p>
