ADDED BACKGROUND IMAGE INSTEAD OF NORMAL IMAGE FOR THE PROFILE PIC TO MAKE IT COMPATIBLE WITH FIREFOX

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body>
-		<main>
+		<!-- <main>
 			<iframe src="./public/sounds/1-minute-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 
 			<audio id="bikeAudio" autoplay loop>
@@ -38,7 +38,7 @@
 						<p></p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			<div id="resume">
 				<div id="profile">
@@ -47,7 +47,7 @@
 						<h1>Profile</h1>
 						<div class="profile">
 							<div id="basicInfo">
-								
+
 								<div class="image"></div>
 								<div class="text">
 									<h2>Aryan Sharma</h2>
