--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body>
-		<!-- <main>
+		<main>
 			<iframe src="./public/sounds/1-minute-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 
 			<audio id="bikeAudio" autoplay loop>
@@ -38,7 +38,7 @@
 						<p></p>
 					</div>
 				</div>
-			</div> -->
+			</div>
 
 			<div id="resume">
 				<div id="profile">
