IMPROVED THE CONTACTINFO ROTATION DIV ANIMATION

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<body>
 		<main>
-			<!-- <iframe src="./public/sounds/1-minute-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+			<iframe src="./public/sounds/1-minute-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 
 			<audio id="bikeAudio" autoplay loop>
 				<source src="./public/sounds/biker.mp3" />
@@ -38,7 +38,7 @@
 						<p></p>
 					</div>
 				</div>
-			</div> -->
+			</div>
 
 			<div id="resume">
 				<div id="profile">
