REPLACED NORMAL IMAGES WITH WEBP IMAGES

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<title>MY RESUME</title>
-		<link rel="icon" type="image/png" href="./public/images/mylogo.png" />
-		<link rel="stylesheet" type="text/css" href="./public/index.css" />
-		<link href="./public/fontawesome-free-5.8.2-web/css/all.css" rel="stylesheet">
-		<link rel="stylesheet" media='screen and (min-width: 300px) and (max-width: 600px)' href="./public/phone.css"/>
-
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/png" href="./public/images/mylogo.png" />
+		<link href="./public/index.css" rel="stylesheet" type="text/css" />
+		<link href="./public/phone.css" rel="stylesheet" media='screen and (min-width: 300px) and (max-width: 600px)' />
+		<link href="./public/fontawesome-free-5.8.2-web/css/all.css" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.waitforimages/1.5.0/jquery.waitforimages.min.js"></script>
@@ -30,7 +29,7 @@
 					</div>
 				</div>
 
-				
+
 				<div class='img1' id="road">
 					<div id="fwheel">
 						<p></p>
