UPDATED THE HEROKU LINK FOR STATUS REPORTING TOOL

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 											
 											</tr>
 											<tr>
-												<td><a href='https://github.com/aryan21710/statusRepTool' target="_blank">STATUS REPORTING TOOL</a></td>
+												<td><a href='https://status-reporting-tool-react.herokuapp.com/' target="_blank">STATUS REPORTING TOOL</a></td>
 												<td>Responsive Web App made out of <b>ReactJS, React-router, Redux, HTML5, CSS3</b></td>
 
 											</tr>
