ADDED PROFESSIONAL EXPERIENCE FOR INTL FCSTONE

--- a/index.html
+++ b/index.html
@@ -90,8 +90,23 @@
 								</div>
 						</div>					
 						<div id="weContent">
-									<div id="Comp1">
-										<h2>Jan 2017 - Current</h2>
+							<div id="Comp1">
+								<h2>Jun 2019 - Current</h2>
+								<h3>Intl FCStone - Full Stack Web Developer</h3>
+								  <ul>
+									<li> Writing well designed, testable, efficient code by using best software development practices. </li>
+									<li> Creating website/Tools layout/user interface by using standard HTML/CSS practices.</li>		
+									<li> Integrating data from various back-end services and databases.</li>
+									<li> Work on Bug Fixing and Resolving Bugs Found On the Ecustody Customer Portal. </li>
+									<li> Working Closely with QA Team to Recreate the Bug and Analyze the Reproduction Steps</li>		
+									<li> Debugging the Code Base to understand the Code flow. </li>
+									<li> Working Closely on Microsoft Azure Devops Tool to file PR after Finding the Right Fix for the bug </li>
+									<li> Created And Designed the Internal Expense Manager Tool Using React/Redux/React-Router/Javascript/CSS3 where Internal Employees can file their claim and Reimbursement Details</li>
+                                  </ul>
+								<br /><br />
+                            </div>
+									<div id="Comp2">
+										<h2>Jan 2017 - May 2019</h2>
 										<h3>Full Stack Web Developer</h3>
 										<table>
 											<tr id="theader">
@@ -215,7 +230,7 @@
 							<ul>
 								<li>
 									HTML5, Javascript, CSS3, Nodejs, MongoDB, ExpressJS, ReactJS, Redux,
-									JQuery, GIT, Responsive Design, Debugging with Chrome DevTools
+									JQuery, GIT, JSON, Python3, Responsive Design, Debugging with Chrome DevTools
 								</li>
 							</ul>
 							<h3>Networking Skills</h3>
