UPDATED THE COVER PAGE , REACT-NATIVE AND REACT COMPONENT INTL EXPERIENCE

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<div class="text">
 									<h2>Aryan Sharma</h2>
 									<p>
-										Self Taught Passionate Full Stack Web Developer. Possess strong expertise and 2
+										Self Taught Passionate Full Stack Web Developer. Possess strong expertise and 3
 										Years of Well-rounded Experience in Building Quality WebSites and WebApps using
 										modern <b>MERN (MongoDB, Express, ReactJS with Redux, Node) stack </b>along with
 										<b>HTML5, CSS3, Javascript</b>
@@ -94,6 +94,8 @@
 								<h2>Jun 2019 - Current</h2>
 								<h3>Intl FCStone - Full Stack Web Developer</h3>
 								  <ul>
+									<li> Working on Mobile Version of Ecustody Portal using React-Native Framework which is compatible with Both Android and IOS Eco-system</li>
+									<li> Creating New React Components to Replace the Old and Existing UI in a step-by-step Fashion</li>
 									<li> Writing well designed, testable, efficient code by using best software development practices. </li>
 									<li> Creating website/Tools layout/user interface by using standard HTML/CSS practices.</li>		
 									<li> Integrating data from various back-end services and databases.</li>
@@ -101,7 +103,7 @@
 									<li> Working Closely with QA Team to Recreate the Bug and Analyze the Reproduction Steps</li>		
 									<li> Debugging the Code Base to understand the Code flow. </li>
 									<li> Working Closely on Microsoft Azure Devops Tool to file PR after Finding the Right Fix for the bug </li>
-									<li> Created And Designed the Internal Expense Manager Tool Using React/Redux/React-Router/Javascript/CSS3 where Internal Employees can file their claim and Reimbursement Details</li>
+									<li> Created And Designed the Internal Expense Manager Tool Using React/Redux/React-Router/Javascript/CSS3 where Internal Employees can file their claim for Reimbursement Purpose</li>
                                   </ul>
 								<br /><br />
                             </div>
@@ -229,7 +231,7 @@
 							<h3>Programming Skills</h3>
 							<ul>
 								<li>
-									HTML5, Javascript, CSS3, Nodejs, MongoDB, ExpressJS, ReactJS, Redux,
+									HTML5, Javascript, CSS3, Nodejs, MongoDB, ExpressJS, ReactJS, Redux, React-Native,
 									JQuery, GIT, JSON, Python3, Responsive Design, Debugging with Chrome DevTools
 								</li>
 							</ul>
