ADDED NORMALIZE CDN TO RESET THE CSS ON ALL THE BROWSERS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>MY RESUME</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/png" href="./public/images/mylogo.png" />
+		<script src="https://yarnpkg.com/en/package/normalize.css"></script>
 		<link href="./public/index.css" rel="stylesheet" media="all" />
 		<link href="./public/phone.css" rel="stylesheet" media='screen and (min-width: 300px) and (max-width: 600px)' />
 		<link href="./public/fontawesome-free-5.8.2-web/css/all.css" rel="stylesheet">
