ADDED JEST IN PROGRAMMING SKILLS

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 							<ul>
 								<li>
 									HTML5, ES6+ Javascript, Dom Manipulation, CSS3, Nodejs, MongoDB, ExpressJS, ReactJS, Redux, React-Native,
-									JQuery, GIT, JSON, Python3, Responsive Design, Debugging with Chrome DevTools, WebPack Module Bundlers, 
-									NPM Package Manager ,Babel.
+									JQuery, GIT, JSON, Responsive Web Design, Debugging with Chrome DevTools, WebPack Module Bundlers, 
+									NPM Package Manager ,Babel, Jest Automation Framework.
 								</li>
 							</ul>
 							<h3>Networking Skills</h3>
